Finish About section endpoints
